# Grpc_graphics

C++/: CMakeLists.txt  common.cmake  greeter_client.cc  greeter_server.cc
C++/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
C++/protos/: helloworld.pb.cc
Python/: =1.23  client.py  server.py
Python/protos/: helloworld_pb2.py  helloworld_pb2_grpc.py
